--- a/_data/blog-categories.yml
+++ b/_data/blog-categories.yml
@@ -1,12 +1,8 @@
-# - category: All
-#   id: all
-#   name: all
-#   checked: true
-- category: News
-  id: cat-news
-  name: cat-news
-  checked: true
 - category: Events
   id: cat-events
   name: cat-events
-  checked: true
+  checked: false
+- category: News
+  id: cat-news
+  name: cat-news
+  checked: false
