--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,7 +18,7 @@ collections:
         fields:
           - label: "Page Title"
             name: "title"
-            widget: "string"
+            widget: "hidden"
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -98,7 +98,7 @@ collections:
         fields:
           - label: "Page Title"
             name: "title"
-            widget: "string"
+            widget: "hidden"
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -251,7 +251,7 @@ collections:
         fields:
           - label: "Page Title"
             name: "title"
-            widget: "string"
+            widget: "hidden"
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -345,7 +345,7 @@ collections:
         fields:
           - label: "Page Title"
             name: "title"
-            widget: "string"
+            widget: "hidden"
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
@@ -392,7 +392,7 @@ collections:
         fields:
           - label: "Page Title"
             name: "title"
-            widget: "string"
+            widget: "hidden"
           - label: "Page Headline"
             name: "h1Text"
             widget: "string"
