--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -158,10 +158,10 @@ our-services:
 what-we-give:
   bannerImg: /images/uploads/hero-home.jpg
   bannerText: >-
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
-    rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam
-    nulla id placerat porta.
-  bannerTitle: 'Each year we donate over $50,000 to local organizations'
+    ## Each year we donate over $50,000 to local organizations
+
+
+    We are incredibly greatful for the support of our volunteers who make these donations possible. For a full break down of who we donate to, see the list below.
   donations:
     - amount: '$6,000.00'
       donor: United Way Lanark County
@@ -232,6 +232,7 @@ what-we-give:
     - amount: $400.00
       donor: Union Hall Community Center
   donationsTitle: 2017 Donations
+  donationsByline: Here’s what we gave back to the community in 2017.
 board:
   boardAbout: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta."
   boardTitle: "2018 Board of Directors"
