Update with anchors and data update

--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -18,10 +18,8 @@ announcements:
     announcementBtnText: Learn More
   announcementImg: /images/uploads/contest-prev.jpg
   message: >-
-    ## Enter to win this month's contest!
+    ## Full dining room set available!
 
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
-    rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam
-    nulla id placerat porta.
+    We recently received a full dining room set including table, four chairs, dishes, candle sticks, and more!
 sponsorBar: true
