--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -1,16 +1,16 @@
 title: About
+h1Text: About The Hub & Rebound
 bylineText: >-
   The Hub & Rebound have a rich history serving the community. Learn how
-  countless volunteers have selflessy given their time to help us grow into
-  what we are today.
-h1Text: About The Hub & Rebound
+  countless volunteers have selflessy given their time to help us grow into what
+  we are today.
 hero: true
 banner:
   bannerButton:
     heroBtn: true
     heroBtnLink: '#history-hub'
-    heroBtnText: Learn More
     heroBtnStyle: smooth-scroll
+    heroBtnText: Learn More
   heroImg: /images/uploads/hero-2.jpg
 history-slides:
   edit-history-slides:
@@ -99,6 +99,9 @@ our-services:
     link: the-hub
     logo: /images/uploads/logo-hub.svg
     longDesc: >-
+      ## This is cool!
+
+
       Located in the heart of Almonte, The Hub is a not-for-profit retail store
       run by the Almonte Community Co-ordinators. Focused on supporting the
       community of Mississippi Mills since its inception in 1974, the Hub
@@ -161,7 +164,9 @@ what-we-give:
     ## Each year we donate over $50,000 to local organizations
 
 
-    We are incredibly greatful for the support of our volunteers who make these donations possible. For a full break down of who we donate to, see the list below.
+    We are incredibly greatful for the support of our volunteers who make these
+    donations possible. For a full break down of who we donate to, see the list
+    below.
   donations:
     - amount: '$6,000.00'
       donor: United Way Lanark County
@@ -232,33 +237,35 @@ what-we-give:
     - amount: $400.00
       donor: Union Hall Community Center
   donationsTitle: 2017 Donations
-  donationsByline: Here’s what we gave back to the community in 2017.
 board:
-  boardAbout: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta."
-  boardTitle: "2018 Board of Directors"
+  boardAbout: >-
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
+    rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam
+    nulla id placerat porta.
   boardMembers:
-    - position: President
-      member: Eloise Caverson
-    - position: First Vice-President
-      member: Janet Duncan
-    - position: Second Vice-President
-      member: Donna Smith
-    - position: Secretary
-      member: Gail Murphy
-    - position: Treasurer
-      member: Mary Ellen Petrunewich
-    - position: Volunteer Coordinator
-      member: Barbara Carroll
-    - position: Director
-      member: Renate Kordos
-    - position: Director
-      member: Julia Thomas
-    - position: Director
-      member: Debbie Pilote
-    - position: Director
-      member: Nancy Hall
-    - position: Director
-      member: Paddy Vargas
-    - position: Director
-      member: Moira Wilkie
+    - member: Eloise Caverson
+      position: President
+    - member: Janet Duncan
+      position: First Vice-President
+    - member: Donna Smith
+      position: Second Vice-President
+    - member: Gail Murphy
+      position: Secretary
+    - member: Mary Ellen Petrunewich
+      position: Treasurer
+    - member: Barbara Carroll
+      position: Volunteer Coordinator
+    - member: Renate Kordos
+      position: Director
+    - member: Julia Thomas
+      position: Director
+    - member: Debbie Pilote
+      position: Director
+    - member: Nancy Hall
+      position: Director
+    - member: Paddy Vargas
+      position: Director
+    - member: Moira Wilkie
+      position: Director
+  boardTitle: 2018 Board of Directors
 sponsorBar: true
