Update volunteer form structure

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -117,7 +117,7 @@ our-services:
     shortDesc: >-
       The Hub is a not-for-profit retail store run by the Almonte Community
       Co-ordinators.
-    slideBGColor: bg-secondary
+    slideBGColor: bg-primary
     title: The Hub
   - bgImg: /images/uploads/rebound.jpg
     link: rebound
@@ -138,7 +138,7 @@ our-services:
     shortDesc: >-
       Rebound is a large item drop off center that helps encourage recycling
       good and reducing waste.
-    slideBGColor: bg-primary
+    slideBGColor: bg-fff
     title: Rebound
   - bgImg: /images/uploads/hub-hospice.jpg
     link: hub-hospice
@@ -156,6 +156,7 @@ our-services:
     shortDesc: >-
       Hub Hospice Palliative Care provides home hospice palliative care services
       to those in need.
+    slideBGColor: bg-secondary
     title: Hub Hospice
 what-we-give:
   bannerImg: /images/uploads/hero-home.jpg
