--- a/admin/config.yml
+++ b/admin/config.yml
@@ -157,7 +157,7 @@ collections:
                     default: { label: "White", value: "bg-fff" }
                     options:
                           - { label: "White", value: "bg-fff" }
-                          - { label: "Brand Turquoise", value: "bg-primary" }
+                          - { label: "Brand Merlot Red", value: "bg-primary" }
                           - { label: "Brand Dark Grey", value: "bg-secondary" }
                   - label: "Slide Text Content"
                     name: "content"
@@ -186,6 +186,14 @@ collections:
               - label: "Reverse position of Slide Image and Text?"
                 name: "reverse"
                 widget: "boolean"
+              - label: "Slide Text Background Colour"
+                name: "slideBGColor"
+                widget: "select"
+                default: { label: "White", value: "bg-fff" }
+                options:
+                      - { label: "White", value: "bg-fff" }
+                      - { label: "Brand Merlot Red", value: "bg-primary" }
+                      - { label: "Brand Dark Grey", value: "bg-secondary" }
                 hint: "If selected, in the services slide the image will appear on the left and the text will be on the right."
               - label: "Long Description"
                 name: "longDesc"
@@ -289,49 +297,64 @@ collections:
             name: "bodyContent"
             widget: "markdown"
           - label: "Volunteer Form"
-            name: "volunteerForm"
-            widget: "list"
+            name: "volunteer-form"
+            widget: "object"
             fields:
-              - label: "Section Title"
-                name: "legend"
-                widget: "string"
-              - label: "Section Title Additional Info"
-                name: "additionalInfo"
-                widget: "string"
-              - label: "Section Layout"
-                name: "fieldlayout"
-                widget: "select"
-                options:
-                  - { label: "Basic", value: "basic" }
-                  - { label: "Checklist", value: "checklists" }
-                  - { label: "Large Text Area", value: "textarea" }
-              - label: "Form Fields"
-                name: "fields"
-                widget: "list"
+              - label: "Form Title"
+                name: "formTitle"
+                widget: "hidden"
+              - label: "Personal Info"
+                name: "personalInfo"
+                widget: "object"
                 fields:
-                  - label: "Label"
-                    name: "label"
+                  - label: "Section Title"
+                    name: "legend"
                     widget: "string"
-                  - label: "Type"
-                    name: "type"
-                    widget: "select"
-                    options:
-                      - { label: "Text Input", value: "text" }
-                      - { label: "Number Input", value: "number" }
-                      - { label: "Email Input", value: "email" }
-                      - { label: "Phone Input", value: "tel" }
-                      - { label: "Password Input", value: "password" }
-                      - { label: "Website Input", value: "url" }
-                      - { label: "Checkboxes", value: "checkbox" }
-                      - { label: "Radio Button Select", value: "radio" }
-                  - label: "ID"
-                    name: "id"
-                    widget: "string"
-                    hint: "Must unique for each form field. Must be lowercase, with dashes (-) instead of spaces. Ex: the-hub."
-                  - label: "Name"
-                    name: "name"
-                    widget: "string"
-                    hint: "If you have a group of Radio Select inputs, they must all have the same Name in order to only allow one to be selected. In all other cases, the names should be unique for each field. Must be lowercase, with dashes (-) instead of spaces. Ex: the-hub."
+
+          # - label: "Volunteer Form"
+          #   name: "volunteerForm"
+          #   widget: "list"
+          #   fields:
+          #     - label: "Section Title"
+          #       name: "legend"
+          #       widget: "string"
+          #     - label: "Section Title Additional Info"
+          #       name: "additionalInfo"
+          #       widget: "string"
+          #     - label: "Section Layout"
+          #       name: "fieldlayout"
+          #       widget: "select"
+          #       options:
+          #         - { label: "Basic", value: "basic" }
+          #         - { label: "Checklist", value: "checklists" }
+          #         - { label: "Large Text Area", value: "textarea" }
+          #     - label: "Form Fields"
+          #       name: "fields"
+          #       widget: "list"
+          #       fields:
+          #         - label: "Label"
+          #           name: "label"
+          #           widget: "string"
+          #         - label: "Type"
+          #           name: "type"
+          #           widget: "select"
+          #           options:
+          #             - { label: "Text Input", value: "text" }
+          #             - { label: "Number Input", value: "number" }
+          #             - { label: "Email Input", value: "email" }
+          #             - { label: "Phone Input", value: "tel" }
+          #             - { label: "Password Input", value: "password" }
+          #             - { label: "Website Input", value: "url" }
+          #             - { label: "Checkboxes", value: "checkbox" }
+          #             - { label: "Radio Button Select", value: "radio" }
+          #         - label: "ID"
+          #           name: "id"
+          #           widget: "string"
+          #           hint: "Must unique for each form field. Must be lowercase, with dashes (-) instead of spaces. Ex: the-hub."
+          #         - label: "Name"
+          #           name: "name"
+          #           widget: "string"
+          #           hint: "If you have a group of Radio Select inputs, they must all have the same Name in order to only allow one to be selected. In all other cases, the names should be unique for each field. Must be lowercase, with dashes (-) instead of spaces. Ex: the-hub."
           - label: "Include sponsor bar?"
             name: "sponsorBar"
             widget: "boolean"
